# MagicGeo

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt  skills-lock.json
.scratch/nelder-mead-coordinate-engine/: PRD.md
docs/adr/: 0001-nelder-mead-coordinate-engine.md
geo/: Auxiliary_function.py  Geometric_function.py  Kernel_function.py  coordinate_engine_config.py  latex_pdf_open.py  nelder_mead_engine.py  text_to_geometric.py
json/: circle.json  quadrangle.json
tests/: conftest.py  test_coordinate_engine.py  test_fusion.py  test_geometry_knowledge.py  test_llm_condition_check.py
