[project]
name = "magicgeo"
version = "0.1.0"
description = "Training-Free Text-Guided Geometric Diagram Generation"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.0",
    "openai>=1.30",
    "pdf2image>=1.17",
    "Pillow>=11.0",
    "python-dotenv>=1.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["geo/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
